# Zinc

./: .gitignore  Actor.cpp  Actor.h  AlienCraft.cpp  AlienCraft.h  CMakeLists.txt  CloudBlock.cpp  EntityGroup.cpp  EntityGroup.h  EventManager.cpp  EventManager.h  GameEvent.h  ImGuiHandler.cpp  ImGuiHandler.h  Logger.cpp  Logger.h  ParticleObjects.cpp  ParticleObjects.h  README.md  SceneManager.cpp  SceneManager.h  ShootTracer.cpp  ShootTracer.h  SkyBox.cpp  SkyBox.h  Utils.h  VolumetricFog.cpp  VolumetricFog.h  easing.c  easing.h  main.cpp  stringutils.h
media/: Player.osgt  ZincSkybox.osgt  islands.3ds.osgt
media/shaders/: volumetricFog.frag
test/: clouds.cpp  infinity.cpp  steering.cpp  volumetricfog.cpp
